@@ -164,7 +164,7 @@
   </property>
   <property>
     <name>hbase.hregion.memcache.block.multiplier</name>
-    <value>2</value>
+    <value>1</value>
     <description>
     Block updates if memcache has hbase.hregion.block.memcache
     time hbase.hregion.flush.size bytes.  Useful preventing
@@ -179,7 +179,7 @@
     <value>268435456</value>
     <description>
     Maximum HStoreFile size. If any one of a column families' HStoreFiles has
-    grown to exceed value + (value / 2), the hosting HRegion is split in two.
+    grown to exceed this value, the hosting HRegion is split in two.
     Default: 256M.
     </description>
   </property>
@@ -200,7 +200,7 @@
   </property>
   <property>
     <name>hbase.regionserver.thread.splitcompactcheckfrequency</name>
-    <value>15000</value>
+    <value>20000</value>
     <description>How often a region server runs the split/compaction check.
     </description>
   </property>
